# booking

./: .gitignore
bookapi/: Cargo.toml  README.md  anki.txt  somefile.txt
bookapi/src/: db.rs  files.rs  main.rs  models.rs
