[package]
name = "bookapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
uuid = {version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
epub = "2.1.1"

[dependencies.mongodb]
version = "2.6.0"
default-features = false
features = ["async-std-runtime"]
