[package]
name = "bookapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
uuid = {version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
epub = "2.1.1"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.6.0"
default-features = false
features = ["async-std-runtime"]
